--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@
 
 html {
   font-family: Roboto, Arial;
+  background-color: hsla(0, 0%, 10%, 1);
+  background-image: url('./assets/images/bg.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 :root {
@@ -36,4 +42,9 @@ h1 {
   font-size: 4rem;
   font-weight: bold;
   text-shadow: 0px 0px 5px black;
+}
+
+
+#grade img {
+  width: 100px;
 }
