--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 
 html {
   font-family: Roboto, Arial;
+  color: white;
   background-color: hsla(0, 0%, 10%, 1);
   background-image: url('./assets/images/bg.jpg');
   background-position: center;
@@ -51,4 +52,8 @@ h1 {
 
 #poste .button-poste {
   @apply flex flex-col gap-2 p-4 border rounded aspect-square w-32;
+}
+
+#unite .button {
+  @apply border p-2
 }
