--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ h1 {
 }
 
 #poste .button-poste {
-  @apply flex flex-col gap-2 p-4 border rounded aspect-square w-32;
+  @apply cursor-pointer flex flex-col gap-2 p-4 border rounded aspect-square w-32;
 }
 
 #unite .button {
