--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ header {
   background-image: url('./assets/images/bg-header.jpg');
   background-position: center;
   background-size: cover;
-  height: 80vh;
+  height: 90vh;
   display: grid;
   place-content: center;
   text-align: center;
@@ -103,11 +103,11 @@ h2 {
 }
 
 .ctn-modal li {
-  border-bottom: 1px solid white;
+  @apply py-2 border-b;
 }
 
 .ctn-modal li:last-child {
-  border-bottom: none;
+  @apply border-b-0
 }
 
 .ctn-modal span {
