--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html {
   font-family: Roboto, Arial;
   color: white;
   background-color: hsla(0, 0%, 10%, 1);
-  background-image: url('./assets/images/bg.jpg');
+  background-image: url('./assets/images/bg/bg.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -29,7 +29,7 @@ html {
 }
 
 header {
-  background-image: url('./assets/images/bg-header.jpg');
+  background-image: url('./assets/images/bg/bg-header.jpg');
   background-position: center;
   background-size: cover;
   height: 90vh;
